--- a/odoo-custom-addons/stock_card_report/wizard/stock_card_report_wizard_view.xml
+++ b/odoo-custom-addons/stock_card_report/wizard/stock_card_report_wizard_view.xml
@@ -7,13 +7,13 @@
             <form>
                 <group name="criteria">
                     <group>
-                        <field name="date_range_id" />
+                        <field name="date_range_id"  options="{'no_open': True, 'no_create': True}" />
                         <field name="date_from" />
                         <field name="date_to" />
                     </group>
                     <group>
-                        <field name="product_ids" widget="many2many_tags" />
-                        <field name="location_id" />
+                        <field name="product_ids" widget="many2many_tags"  options="{'no_open': True, 'no_create': True}" />
+                        <field name="location_id"  options="{'no_open': True, 'no_create': True}" />
                     </group>
                 </group>
                 <footer>
